--- a/js/intersection_observer/index.html
+++ b/js/intersection_observer/index.html
@@ -20,13 +20,13 @@
         </nav>
     </header>
     <main>
-        <section class="home">
+        <section data-index="0" class="home">
             <h2>home</h2>
         </section>
-        <section class="photos">
+        <section data-index="1" class="photos">
             <h2>Photos</h2>
         </section>
-        <section class="music">
+        <section data-index="2" class="music">
             <h2>Music</h2>
         </section>
     </main>
